Fixed overflow issue

--- a/swipe-to-delete.component.css
+++ b/swipe-to-delete.component.css
@@ -44,7 +44,7 @@
   background-color: inherit;
   cursor: move;
 
-  /*overflow: hidden;*/
+  overflow: hidden;
 }
 
 .swipeContentContainer {
